# back/docs/swagger.json
@@ -5,29 +5,6 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/example/helloworld": {
-            "get": {
-                "description": "do ping",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/rooms": {
             "get": {
                 "description": "Get all chat rooms",
@@ -47,7 +24,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Room"
+                                "$ref": "#/definitions/models.Room"
                             }
                         }
                     }
@@ -72,7 +49,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Room"
+                            "$ref": "#/definitions/models.Room"
                         }
                     }
                 ],
@@ -80,7 +57,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/main.Room"
+                            "$ref": "#/definitions/models.Room"
                         }
                     }
                 }
@@ -112,7 +89,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Room"
+                            "$ref": "#/definitions/models.Room"
                         }
                     }
                 }
@@ -151,7 +128,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Room"
+                            "$ref": "#/definitions/models.Room"
                         }
                     }
                 }
@@ -176,7 +153,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.User"
+                                "$ref": "#/definitions/models.User"
                             }
                         }
                     }
@@ -201,7 +178,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 ],
@@ -209,7 +186,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
@@ -241,7 +218,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
@@ -249,7 +226,7 @@
         }
     },
     "definitions": {
-        "main.Room": {
+        "models.Room": {
             "type": "object",
             "properties": {
                 "description": {
@@ -264,12 +241,12 @@
                 "users": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/main.User"
+                        "$ref": "#/definitions/models.User"
                     }
                 }
             }
         },
-        "main.User": {
+        "models.User": {
             "type": "object",
             "properties": {
                 "email": {
@@ -284,7 +261,7 @@
                 "rooms": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/main.Room"
+                        "$ref": "#/definitions/models.Room"
                     }
                 }
             }
